[gd_scene load_steps=9 format=2]

[ext_resource path="res://Common/LevelElements/DoorSwitch/DoorSwitch.png" type="Texture" id=1]
[ext_resource path="res://Common/TriggerAreas/TriggerArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Common/LevelElements/DoorSwitch/DoorSwitch.gd" type="Script" id=3]
[ext_resource path="res://Common/LevelElements/DoorSwitch/DoorSwitchGlow.png" type="Texture" id=4]

[sub_resource type="Animation" id=3]
resource_name = "SwitchOff"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteGlow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TriggerArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SwitchOn"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteGlow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TriggerArea:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 56.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 27 )

[node name="DoorSwitch" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SwitchOff = SubResource( 3 )
anims/SwitchOn = SubResource( 4 )

[node name="ToggleCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2

[node name="SpriteGlow" type="Sprite" parent="."]
modulate = Color( 0.57, 1.16, 2.32, 1 )
texture = ExtResource( 4 )
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="TriggerArea" parent="." instance=ExtResource( 2 )]
monitorable = false

[node name="CollisionShape2D" parent="TriggerArea" index="0"]
position = Vector2( -8.57314e-06, -5.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="TriggerArea" to="." method="_on_TriggerArea_area_entered"]

[editable path="TriggerArea"]
